--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,5 @@
+0.5.6:
+ Hotfix: handoutcolor-theme was not only used for handouts but also for presentations
 0.5.5:
  added a solution to marke some slides as very important (see #attn in documentation)
  modified helptext
