--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,6 @@
+0.5.7:
+ Fixed a problem in processing option handoutcolor
+ Fixed some typos in README
 0.5.6:
  Hotfix: handoutcolor-theme was not only used for handouts but also for presentations
 0.5.5:
